# SimpleBankApplication

./: CMakeLists.txt  Makefile  README.md
data/: user_data.csv
glade/: dashboard.glade  greet_final.glade
oldsrc/: bank.h  csv_db.c  dashboard_main.c  data2.csv  greet_main_test.c  main.c  test.csv
src/: bank.h  bank_main.c  bank_management.c  dashboard.c  encryptdecrypt.c  greet_main.c  main.c  messages.c  test.c
src/temp/: bank_main.c
